2006-06-11 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/gen.c (genCast): fixed bug with assignment of a pointer
	to a char variable. Fixed bug #1504211

2006-06-10 Borut Razem <borut.razem AT siol.net>

	* CVSROOT: removed the CVS left-over

2006-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/hc08/asmain.c (asexit),
	* as/hc08/lkmain.c (lkexit),
	* as/mcs51/asmain.c (asexit),
	* as/mcs51/lkmain.c (lkexit),
	* src/SDCCglue.c (DEFSETFUNC),
	* src/SDCCmain.c (linkEdit, assemble),
	* support/librarian/sdcclib.c (AddRel),
	  replaced unlink() by standard C remove()
	* src/SDCC.y: replaced removePostIncDecOps() by createRMW()
	* src/SDCCast.c (replaceAstWithTemporary, createRMW,
	  gatherImplicitVariables): new, added to fix bug 608752,
	  (createFunction): added gatherImplicitVariables()
	* src/SDCCast.h: added createRMW prototype
	* src/SDCCsymt.h (struct symbol): added infertype
	* support/regression/tests/bug608752.c: new, added

2006-06-10 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_aopOp): use WREG as destination even for
	  multibyte dummy reads (fixes #1503234)

2006-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/compiler.h: new, added header file to enable
	  creating common sfr definition header files for different compilers

2006-06-05 Raphael Neider <rneider AT web.de>

	* src/pic16/{pcode.h,genarith.c}:
	  introduced pCodeOp combining any two pCodeOps (previously only
	  two register operands could be combined), removed pcop2 from
	  pCodepReg, replaced pCodeOpReg2 with pCodeOp2, fixes #1492366
	* src/pic16/pcodepeep.c (pic16_pCodeOpCopy): added case for PO_TWO_OPS
	* src/pic16/gen.c (pic16_popGet2,pic16_popGet2p,pic16_popCombine2):
	  rewritten to use new PO_TWO_OPS
	* src/pic16/main.c (_hasNativeMulFor): cover more cases natively,
	* src/pic16/pcode.c (pic16_newpCodeOpImmd): initialize rIdx field,
	  (pic16_newpCodeOp): catch invalid attempts on PO_TWO_OPS,