@@ -1,3 +1,8 @@
+2006-06-11 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/lib/printf_large.c (OUTPUT_CHAR, _output_char): added and used
+	  for optimization
+
 2006-06-11 Vangelis Rokas <vrokas AT users.sourceforge.net>
 
 	* src/pic16/gen.c (genCast): fixed bug with assignment of a pointer
